--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit"
   },
-  "explorer.compactFolders": false
+  "explorer.compactFolders": false,
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "vscode.css-language-features"
+  }
 }
