--- a/package.json
+++ b/package.json
@@ -14,7 +14,18 @@
     "@use-it/interval": "^0.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/utils": "^4.11.3",
+    "formik": "^2.2.9",
+    "formik-material-ui": "^3.0.1",
+    "formik-material-ui-lab": "^0.0.8",
+    "formik-material-ui-pickers": "^0.0.12",
+    "@date-io/core": "^1.3.13",
+    "@date-io/moment": "^1.3.13"
   },
   "scripts": {
     "start": "react-scripts start",
